# mimir

./: .env.example  .gitignore  CHANGELOG.md  CLAUDE.md  Justfile  LICENSE  README.md  TODO.md  codex.yml  cspell.config.yaml  lychee.toml  pyproject.toml  pytest.ini
.claude/commands/: commit.md  pr-analyze-comments.md  pr-deep-review.md  pr-request-review.md
.docs-templates/: cli-reference.md  contributor-guide.md  how-to.md  overview.md  policy.md
.github/: claude-costs.json
.github/scripts/: post_coverage_comment.py
.github/workflows/: ci.yml  claude.yml  codex-review.yml  docs-quality.yml  docs-search.yml  notify-slack.yml  release.yml  slack-message.yml
config/: default.yaml
docs/: PRIVATE_DEPENDENCIES.md  README.docsearch.md  SECURITY_FIXES.md  index.md
scripts/: docs_phase2.sh  freeze_spacewalker_docs.py  render_search_report.py  validate_search_datasets.py
scripts/helpers/: claude_metrics.py  slack_payload.py
src/mimir/: __init__.py  __version__.py
src/mimir/ai/: embeddings.py  llm_integration.py  pipeline.py  vector_search.py
src/mimir/cli/: __init__.py  __main__.py  analytics.py  main.py
src/mimir/core/: cache.py  cost_engine.py  error_handling.py  indexer.py  search.py  settings.py  telemetry.py
src/mimir/output/: __init__.py  llm_formatter.py
tests/: conftest.py  test_cli.py  test_indexer.py  test_search_engine.py
tests/data/: README.md
tests/integration/: __init__.py  test_spacewalker_cli.py  test_spacewalker_indexer.py  test_spacewalker_search_engine.py
tests/search/: README.md  conftest.py  metrics.py  requirements.txt  test_chat.py
tests/search/baseline/: default_minilm.json
tests/search/configs/: default_minilm.yaml
(+2 files in other folders)
